// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector should be vertical and match snapshot 1`] = `
<Selectorstyles__Wrapper
  vertical={true}
>
  <Selectorstyles__Element
    key="en"
    onClick={[Function]}
    selected={false}
    to="/augsburg/en/"
  >
    English
  </Selectorstyles__Element>
  <Selectorstyles__Element
    key="de"
    onClick={[Function]}
    selected={true}
    to="/augsburg/de/"
  >
    Deutsch
  </Selectorstyles__Element>
  <Selectorstyles__Element
    data-tip="random tooltip"
    key="fr"
  >
    Französisch
  </Selectorstyles__Element>
</Selectorstyles__Wrapper>
`;

exports[`Selector should match snapshot 1`] = `
<Selectorstyles__Wrapper
  vertical={false}
>
  <Selectorstyles__Element
    key="en"
    onClick={[Function]}
    selected={false}
    to="/augsburg/en/"
  >
    English
  </Selectorstyles__Element>
  <Selectorstyles__Element
    key="de"
    onClick={[Function]}
    selected={true}
    to="/augsburg/de/"
  >
    Deutsch
  </Selectorstyles__Element>
  <Selectorstyles__Element
    data-tip="random tooltip"
    key="fr"
  >
    Französisch
  </Selectorstyles__Element>
</Selectorstyles__Wrapper>
`;
